Install-k8s and master file updated.

--- a/playbooks/install-k8s.yml
+++ b/playbooks/install-k8s.yml
@@ -3,7 +3,7 @@
   remote_user: devadmin
   become: yes
   become_method: sudo
-  become_user: root
+  become_user: devadmin
   gather_facts: yes
   connection: ssh
 
