--- a/playbooks/users.yml
+++ b/playbooks/users.yml
@@ -4,7 +4,9 @@
   tasks:
     - name: create the maidul user account
       user: name=maidul append=yes state=present createhome=yes shell=/bin/bash
-      password: "{{ 'A@dev2021' | password_hash('sha512', 'mysecretsalt') }}"
+      vars:
+        mypassword: "A@dev2021"
+      password: "{{ mypassword | password_hash('sha512') }}"
 
     - name: allow 'maidul' to use sudo without needing a password
       lineinfile:
