--- a/playbooks/master.yml
+++ b/playbooks/master.yml
@@ -2,7 +2,7 @@
   become: yes
   tasks:
     - name: initialize the cluster
-      shell: sudo kubeadm init --pod-network-cidr=192.168.0.0/16
+      shell: kubeadm init --pod-network-cidr=192.168.0.0/16
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
@@ -25,22 +25,19 @@
     - name: install Pod network
       become: yes
       become_user: devadmin
-      shell: sudo kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
+      shell: kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
       args:
         chdir: $HOME
 
     - name: Get the token for joining the worker nodes
       become: yes
       become_user: devadmin
-      shell: sudo kubeadm token create  --print-join-command
+      shell: kubeadm token create  --print-join-command
       register: kubernetes_join_command
 
     - debug:
-      become: yes
-      become_user: devadmin
       msg: "{{ kubernetes_join_command.stdout }}"
 
     - name: Copy join command to local file.
       become: yes
-      become_user: devadmin
       local_action: copy content="{{ kubernetes_join_command.stdout_lines[0] }}" dest="/tmp/kubernetes_join_command" mode=0777
