--- a/playbooks/master.yml
+++ b/playbooks/master.yml
@@ -1,8 +1,23 @@
 - hosts: masters
   become: yes
   tasks:
+    - name: generate kubeadm init
+      become: yes
+      become_user: devadmin
+      shell: |
+        kubeadm config print init-defaults | tee ClusterConfiguration.yaml
+        sed -i 's/  advertiseAddress: 1.2.3.4/  advertiseAddress: 192.168.97.74/' ClusterConfiguration.yaml
+        sed -i 's/  criSocket: \/var\/run\/dockershim\.sock/  criSocket: \/run\/containerd\/containerd\.sock/' ClusterConfiguration.yaml
+        sed -i 's/  name: node/  name: amsl-qa-master/' ClusterConfiguration.yaml
+        cat <<EOF | cat >>  ClusterConfiguration.yaml
+        ---
+        apiVersion: kubelet.config.k8s.io/v1beta1
+        kind: KubeletConfiguration
+        cgroupDriver: systemd
+        EOF
+
     - name: initialize the cluster
-      shell: kubeadm init --pod-network-cidr=192.168.0.0/16
+      shell: sudo kubeadm init --config=ClusterConfiguration.yaml --cri-socket /run/containerd/containerd.sock
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
@@ -18,7 +33,7 @@
     - name: copies admin.conf to user's home directory
       copy:
         src: /etc/kubernetes/admin.conf
-        dest: /home/devadmin/.kube/config
+        dest: /home/.kube/config
         remote_src: yes
         owner: devadmin
 
@@ -32,7 +47,9 @@
     - name: Get the token for joining the worker nodes
       become: yes
       become_user: devadmin
-      shell: kubeadm token create  --print-join-command
+      shell: |
+        openssl x509 -pubkey -in /etc/kubernetes/pki/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* //' 
+        kubeadm token create  --print-join-command
       register: kubernetes_join_command
 
     - debug:
