--- a/playbooks/master.yml
+++ b/playbooks/master.yml
@@ -6,9 +6,9 @@
       become_user: devadmin
       shell: |
         kubeadm config print init-defaults | tee ClusterConfiguration.yaml
-        sed -i 's/  advertiseAddress: 1.2.3.4/  advertiseAddress: 192.168.97.74/' ClusterConfiguration.yaml
-        sed -i 's/  criSocket: \/var\/run\/dockershim\.sock/  criSocket: \/run\/containerd\/containerd\.sock/' ClusterConfiguration.yaml
-        sed -i 's/  name: node/  name: amsl-qa-master/' ClusterConfiguration.yaml
+        sudo sed -i 's/  advertiseAddress: 1.2.3.4/  advertiseAddress: 192.168.97.74/' ClusterConfiguration.yaml
+        sudo sed -i 's/  criSocket: \/var\/run\/dockershim\.sock/  criSocket: \/run\/containerd\/containerd\.sock/' ClusterConfiguration.yaml
+        sudo sed -i 's/  name: node/  name: amsl-qa-master/' ClusterConfiguration.yaml
         cat <<EOF | cat >>  ClusterConfiguration.yaml
         ---
         apiVersion: kubelet.config.k8s.io/v1beta1
