--- a/playbooks/master.yml
+++ b/playbooks/master.yml
@@ -1,5 +1,11 @@
 - hosts: masters
+  remote_user: devadmin
   become: yes
+  become_method: sudo
+  become_user: root
+  gather_facts: yes
+  connection: ssh
+
   tasks:
     - name: generate kubeadm init
       become: yes
