--- a/playbooks/master.yml
+++ b/playbooks/master.yml
@@ -9,6 +9,9 @@
   tasks:
     - name: generate kubeadm init
       shell: |
+        sudo swapoff -a
+        sudo systemctl restart kubelet.service
+        sudo apt-get update
         wget https://docs.projectcalico.org/manifests/calico.yaml
         sudo kubeadm config print init-defaults | tee ClusterConfiguration.yaml
         sudo sed -i 's/  advertiseAddress: 1.2.3.4/  advertiseAddress: 192.168.97.74/' ClusterConfiguration.yaml
